feat: Use NestedSelect from cozy-ui
Added tests for isSelected
Removed tests testing the core logic of NestedSelect

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -257,7 +257,8 @@
   },
   "Categories": {
     "choice": {
-      "title": "Update category"
+      "title": "Update category",
+      "select-all": "Select all"
     },
     "filter": {
       "credit": "earnings",
