--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -192,7 +192,8 @@
 
   "Categories": {
     "choice": {
-      "title": "Modifier la catégorie"
+      "title": "Modifier la catégorie",
+      "select-all": "Sélectionner tout"
     },
     "board": {
       "debit-header": "Dépense",
